2.5.10 Ran Sonar lint and fixed identified code issues.